refactor: fix core logic, change project structure